; ModuleID = '/home/carl/AnghaBench/mpv/video/out/placebo/extr_utils.c_log_cb_probing.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/placebo/extr_utils.c_log_cb_probing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }

@pl_log_to_msg_lev = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*)* @log_cb_probing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_cb_probing(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.mp_log*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.mp_log*
  store %struct.mp_log* %9, %struct.mp_log** %7, align 8
  %10 = load %struct.mp_log*, %struct.mp_log** %7, align 8
  %11 = load i32*, i32** @pl_log_to_msg_lev, align 8
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @probing_map(i32 %12)
  %14 = getelementptr inbounds i32, i32* %11, i64 %13
  %15 = load i32, i32* %14, align 4
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @mp_msg(%struct.mp_log* %10, i32 %15, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %16)
  ret void
}

declare dso_local i32 @mp_msg(%struct.mp_log*, i32, i8*, i8*) #1

declare dso_local i64 @probing_map(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
